--- a/Portfolio/Views/Home/About.cshtml
+++ b/Portfolio/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Acerca de";
 }
 <main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
