pagina Acerca De terminada

--- a/Portfolio/Views/Home/About.cshtml
+++ b/Portfolio/Views/Home/About.cshtml
@@ -1,9 +1,68 @@
 ﻿@{
-    ViewBag.Title = "Acerca de";
+    ViewData["Title"] = "Acerca De...";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
-</main>
+<style>
+    body {
+        background-color: lightgray;
+    }
+
+    h1 {
+        color: #004080;
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+
+    h3 {
+        font-size: 24px;
+        color: #004080;
+    }
+
+    p {
+        font-size: 18px;
+        color: #000000;
+    }
+
+    ul li::marker {
+        color: coral;
+    }
+
+    li {
+        font-size: 18px;
+        color: black;
+    }
+</style>
+
+<script>
+
+</script>
+
+<h1>@ViewData["Title"]</h1>
+
+<div>
+    <p>
+        Hola, soy Rolando J. García Juárez.
+        Actualmente estoy en 8vo. Trimestre de la Carrera de Ingenieria en Sistemas en la Universidad de Occidente<br />
+        desde siempre me ha facinado el desarrollo de software.<br />
+        Mi objetivo es utilizar mis conocimientos en C# y Paginas Web para construir apliaciones que sean
+        intuitivas y realmente útiles.<br />
+        Estoy infocado en aprender sobre Redes y estoy buscando activamente oportunidades de proyectos freelance
+        donde pueda aplicar mis habilidades y seguir creciendo.
+    </p>
+</div>
+<br />
+<div>
+    <h3>Habilidades Técnicas</h3>
+    <ul>
+        <li>Lenguajes: [C#, HTML, Python]</li>
+        <li>Software: [Visual Studio Code, Visual Studio, GIT]</li>
+    </ul>
+    <br />
+    <h3>Habilidades Blandas (Soft Skills)</h3>
+    <ul>
+        <li>Resolución de Problemas</li>
+        <li>Trabajo en Equipo</li>
+        <li>Comunicación Efectiva</li>
+        <li>Aprendizaje Rápido</li>
+    </ul>
+</div>
